RESOLVED FIXED12997
JavaScriptCore Build fix
https://bugs.webkit.org/show_bug.cgi?id=12997
Summary JavaScriptCore Build fix
Shrikant Gangoda
Reported 2007-03-07 01:25:53 PST
g++ -c -o obj-gnu/jscore_collector.o -D_THREAD_SAFE -pthread -I. -I./DerivedSources/JavaScriptCore -I./ForwardingHeaders -I./bindings/c -I./bindings/jni -I./bindings -I./kjs -I./pcre -I./wtf -DUSE_CONSERVATIVE_GC=0 -DENABLE_XSLT=1 -DHAVE_FUNC_ISNAN -g -g -Wall -O2 -fno-strict-aliasing -fPIC -DPIC -fno-rtti -fno-exceptions -MTobj-gnu/jscore_collector.o -MF`echo obj-gnu/jscore_collector.o | sed -e 's,\.o$,.d,'` -MD kjs/collector.cpp kjs/collector.cpp: In static member function `static void KJS::Collector::markMainThreadOnlyObjects()': kjs/collector.cpp:503: error: `pthread_main_np' was not declared in this scope kjs/collector.cpp:503: warning: unused variable 'pthread_main_np' make: *** [obj-gnu/jscore_collector.o] Error 1
Attachments
JavaScriptCore build fix (511 bytes, patch)
2007-03-07 01:29 PST, Shrikant Gangoda
mjs: review+
Shrikant Gangoda
Comment 1 2007-03-07 01:29:53 PST
Created attachment 13511 [details] JavaScriptCore build fix
Maciej Stachowiak
Comment 2 2007-03-07 01:51:34 PST
Comment on attachment 13511 [details] JavaScriptCore build fix r=me
Mark Rowe (bdash)
Comment 3 2007-03-07 02:00:41 PST
Landed in r20015. Including a changelog would make it slightly easier to land changes in the future. Thanks for the fix!
Note You need to log in before you can comment on or make changes to this bug.