2007-03-07  Shrikant Gangoda  <shrikant.gangoda@celunite.com>

Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=12997

        Wrap pthread-specific assertion in #if USE(MULTIPLE_THREADS).

        * kjs/collector.cpp:
        (KJS::Collector::markMainThreadOnlyObjects):


Canonical link: https://commits.webkit.org/16829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20015 268f45cc-cd09-0410-ab3c-d52691b4dbfc